test/js/node/test/parallel/test-stream-readable-async-iterators.js.log.txt
83 |     }
84 |   };
85 |   const onerror = (err) => {
86 |     callback.@call(stream, err);
87 |   };
88 |   const onclose = () => {
                       ^
TypeError: requires 2 arguments
      at internal:streams/end-of-stream:88:19
726 |         readable.close();
727 |       }
728 | 
729 |       assert.fail('should have thrown');
730 |     } catch (err) {
731 |       assert.strictEqual(err.code, 'ERR_STREAM_PREMATURE_CLOSE');
                   ^
AssertionError: Expected values to be strictly equal:
+ actual - expected

+ 'ERR_ASSERTION'
- 'ERR_STREAM_PREMATURE_CLOSE'
       ^
 code: "ERR_ASSERTION"

      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-readable-async-iterators.js:731:14
      at processTicksAndRejections (native:7:39)
777 |   })().then(common.mustCall());
778 | 
779 |   // Check non-object options.
780 |   {
781 |     const readable = createReadable();
782 |     assert.throws(
                 ^
AssertionError: Expected values to be strictly deep-equal:
+ actual - expected

  {
    code: 'ERR_INVALID_ARG_TYPE',
+   message: 'The "options" argument must be of type object. Received: 42',
-   message: 'The "options" argument must be of type object. Received type number (42)',
    name: 'TypeError'
  }
 code: "ERR_ASSERTION"

      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-readable-async-iterators.js:782:12
      at native:11:43

Bun v1.1.31-debug+5fc53353f (macOS arm64)
